amend tests of GraphServiceImplTest, CostServiceImplTest and SalePointServiceImplTest